--- a/css/style.css
+++ b/css/style.css
@@ -549,3 +549,33 @@ h3.my-profession {
   color: var(--text-black-700);
   line-height: 25px;
 }
+/* **************** */
+/* Portfolio Section */
+/* **************** */
+.portfolio .container {
+  padding-bottom: 40px;
+}
+.portfolio .portfolio-heading {
+  flex: 0 0 100%;
+  max-width: 100%;
+}
+.portfolio .portfolio-heading h2 {
+  font-weight: 500;
+  color: var(--text-black-900);
+  margin-bottom: 40px;
+}
+.portfolio .portfolio-item {
+  flex: 0 0 33.3%;
+  max-width: 33.3%;
+  margin-bottom: 30px;
+}
+.portfolio .portfolio-item-inner {
+  border: 6px solid var(--bg-black-100);
+  border-radius: 10px;
+  overflow: hidden;
+  cursor: pointer;
+}
+.portfolio .portfolio-item-inner .portfolio-img img {
+  width: 100%;
+  display: block;
+}
