--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
   line-height: 1.5;
   font-size: 16px;
   font-family: "Poppins", sans-serif;
+  /* width: 100vw; */
 }
 * {
   margin: 0;
@@ -201,6 +202,7 @@ ul {
 .section-home {
   background: var(--bg-black-900);
   min-height: 100vh;
+  /* width: 100%; */
   /* position: fixed;
   left: 270px; */
   padding: 0 30px;
@@ -257,27 +259,27 @@ h3.my-profession {
 .home-img::after {
   content: "";
   position: absolute;
-  height: 80px;
-  width: 80px;
+  height: 70px;
+  width: 70px;
   border-bottom: 10px solid var(--skin-color);
   border-right: 10px solid var(--skin-color);
-  right: 20px;
-  bottom: -40px;
+  right: 48px;
+  bottom: -10px;
 }
 .home-img::before {
   content: "";
   position: absolute;
-  height: 80px;
-  width: 80px;
+  height: 70px;
+  width: 70px;
   border-top: 10px solid var(--skin-color);
   border-left: 10px solid var(--skin-color);
-  left: -20px;
-  top: -40px;
+  left: 28px;
+  top: -36px;
 }
 .home .home-img img {
   margin: auto;
   border-radius: 5px;
-  height: 400px;
+  height: 300px;
 }
 
 /* *************** */
@@ -699,5 +701,10 @@ h3.my-profession {
   .about .about-content .personal-info {
     flex: 0 0 100%;
     max-width: 100%;
+  }
+}
+@media (max-width: 446px) {
+  .section-home {
+    width: 100%;
   }
 }
