--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,14 @@
   --text-black-900: #302e4d;
   --text-black-700: #504e70;
 }
+body.dark {
+  --bg-black-900: #151515;
+  --bg-black-100: #222222;
+  --bg-black-50: #393939;
+  --text-black-900: #ffffff;
+  --text-black-700: #e9e9e9;
+}
+
 body {
   line-height: 1.5;
   font-size: 16px;
@@ -88,6 +96,7 @@ ul {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: all 0.3s ease;
 }
 .section-aside .logo {
   position: absolute;
@@ -143,6 +152,7 @@ ul {
   display: none;
   justify-content: center;
   align-items: center;
+  transition: all 0.3s ease;
 }
 .section-aside .aside-nav-toggler span {
   height: 2px;
@@ -195,10 +205,7 @@ ul {
 /* *************** */
 /* Home section */
 /* *************** */
-.section-main {
-  padding-left: 270px;
-  /* display: flex; */
-}
+
 .section-home {
   background: var(--bg-black-900);
   min-height: 100vh;
@@ -210,6 +217,31 @@ ul {
   right: 0;
   z-index: 0; */
   opacity: 1;
+  position: fixed;
+  left: 270px;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
+  transition: all 0.3s ease;
+}
+.section-home.back-section {
+  z-index: 1;
+}
+.section-home.active {
+  z-index: 2;
+  opacity: 1;
+  animation: slideSection 1s ease;
+}
+@keyframes slideSection {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
 }
 .row {
   display: flex;
@@ -665,6 +697,22 @@ h3.my-profession {
   .section-aside {
     left: -270px;
   }
+  .section-aside.open {
+    left: 0;
+  }
+  .section-aside .aside-nav-toggler {
+    display: flex;
+    left: 30px;
+  }
+  .section-aside .aside-nav-toggler.open {
+    left: 300px;
+  }
+  .section-home {
+    left: 0;
+  }
+  .section-home.open {
+    left: 270px;
+  }
   .section-main {
     padding-left: 0;
   }
@@ -701,10 +749,5 @@ h3.my-profession {
   .about .about-content .personal-info {
     flex: 0 0 100%;
     max-width: 100%;
-  }
-}
-@media (max-width: 446px) {
-  .section-home {
-    width: 100%;
   }
 }
