--- a/css/style.css
+++ b/css/style.css
@@ -161,6 +161,10 @@ ul {
   display: inline-block;
   position: relative;
 }
+.section-aside .aside-nav-toggler.open span {
+  background-color: transparent;
+}
+
 .section-aside .aside-nav-toggler span::before {
   content: "";
   height: 2px;
@@ -170,6 +174,10 @@ ul {
   top: -6px;
   left: 0;
 }
+.section-aside .aside-nav-toggler.open span::before {
+  transform: rotate(45deg);
+  top: 0;
+}
 .section-aside .aside-nav-toggler span::after {
   content: "";
   height: 2px;
@@ -178,6 +186,10 @@ ul {
   position: absolute;
   top: 6px;
   left: 0;
+}
+.section-aside .aside-nav-toggler.open span::after {
+  transform: rotate(-45deg);
+  top: 0;
 }
 .section-aside .aside-nav {
   margin-top: 50px;
@@ -400,7 +412,7 @@ h3.my-profession {
   margin-top: 30px;
 }
 .about .about-content .personal-info .buttons .btn {
-  margin-right: 15px;
+  /* margin-right: 15px; */
   margin-top: 10px;
 }
 
